--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
             <li><a href="#"><img src="images/medium/54.jpg"/></a></li>
           </ul>
         </div>
+        <div class="overlay">
+          <img src="images/oldschool.png" class="oldschool animated twister" />
+          <img src="images/hackday.png" class="hackday animated twister2" />
+        </div>
       </section>
     </div>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
