--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <section class="main">
 
         <div id="ri-grid" class="ri-grid ri-grid-size-3">
-          <ul>
+          <ul
             <li><a href="#"><img src="images/medium/1.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/2.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/3.jpg"/></a></li>
@@ -85,6 +85,26 @@ $(function() {
     rows : 6,
     columns : 3,
     maxStep : 3,
+    w1024 : {
+      rows : 6,
+      columns : 3
+    },
+    w768 : {
+      rows : 6,
+      columns : 3
+    },
+    w480 : {
+      rows : 6,
+      columns : 3
+    },
+    w320 : {
+      rows : 6,
+      columns : 3
+    },
+    w240 : {
+      rows : 6,
+      columns : 3
+    },
     interval : 5000,
   });
 });
