--- a/roxanne.html
+++ b/roxanne.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="movies">
+<html lang="en" class="roxanne">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
@@ -16,75 +16,127 @@
         <div id="ri-grid" class="ri-grid ri-grid-size-3">
           <ul
             <li><a href="#"><img src="images/movies/1.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/1.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/2.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/2.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/3.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/3.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/4.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/4.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/5.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/5.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/6.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/6.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/7.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/7.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/8.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/8.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/9.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/9.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/10.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/10.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/11.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/11.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/12.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/12.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/13.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/13.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/14.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/14.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/15.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/15.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/16.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/16.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/17.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/17.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/18.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/18.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/19.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/19.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/20.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/20.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/21.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/21.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/22.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/22.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/23.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/23.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/24.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/24.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/25.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/25.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/26.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/26.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/27.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/27.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/28.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/28.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/29.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/29.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/30.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/30.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/31.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/31.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/32.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/32.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/33.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/33.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/34.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/34.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/35.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/35.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/36.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/36.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/37.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/37.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/38.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/38.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/39.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/39.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/40.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/40.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/41.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/41.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/42.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/42.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/43.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/43.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/44.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/44.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/45.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/45.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/46.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/46.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/47.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/47.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/48.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/48.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/49.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/49.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/50.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/50.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/51.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/51.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/52.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/52.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/53.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/53.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/54.jpg"/></a></li>
+            <li><a href="#"><img src="images/medium/54.jpg"/></a></li>
           </ul>
-        </div>
-        <div class="overlay">
-          <img src="images/sticker.png" class="oldschool animated shakeit shakeit2" />
-          <img src="images/sticker2.png" class="oldschool animated shakeit" />
-          <img src="images/sticker3.png" class="hackday animated shakeit shakeit3" />
         </div>
       </section>
     </div>
+        <div class="overlay">
+          <img src="images/sticker.png" class="hackday animated shakeit"/>
+        </div>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery.gridrotator.js"></script>
     <script type="text/javascript"> 
 $(function() {
   $('#ri-grid').gridrotator({
-    rows : 7,
-    columns : 3,
+    rows : 4,
+    columns : 6,
     maxStep : 3,
     w1024 : {
       rows : 7,
@@ -112,3 +164,4 @@ $(function() {
     </script>
   </body>
 </html>
+
