--- a/roxanne.html
+++ b/roxanne.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
     <title>DOMO Old School HackDay</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-    <link rel="stylesheet" type="text/css" href="css/demo.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" type="text/css" href="css/demo.css" />
     <script type="text/javascript" src="js/modernizr.custom.26633.js"></script>
   </head>
   <body>
@@ -128,7 +128,9 @@
       </section>
     </div>
         <div class="overlay">
-          <img src="images/sticker.png" class="hackday animated shakeit"/>
+          <div class="move">
+            <img src="images/sticker-roxanne.png" class="hackday animated shakeit"/>
+          </div>
         </div>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery.gridrotator.js"></script>
@@ -160,6 +162,16 @@ $(function() {
     },
     interval : 5000,
   });
+
+  var sticker = document.querySelector('.move');
+  window.setInterval(function() {
+    sticker.style.transform = 'translate(' + getRandom(-500, 500) + 'px, ' + getRandom(-450, 450) + 'px)';
+  }, 5e3);
+
+  function getRandom(min, max) {
+    return Math.random() * (max - min) + min;
+  }
+
 });
     </script>
   </body>
