--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
         </div>
         <div class="overlay">
           <!--<img src="images/oldschool.png" class="oldschool animated twister" />-->
-          <img src="images/sticker.png" class="oldschool animated twister" />
-          <img src="images/sticker2.png" class="oldschool animated twister2" />
+          <img src="images/sticker2.png" class="oldschool animated twister" />
+          <img src="images/sticker.png" class="oldschool animated twister2" />
           <img src="images/sticker3.png" class="hackday animated twister3" />
         </div>
       </section>
