--- a/movies.html
+++ b/movies.html
@@ -72,8 +72,8 @@
           </ul>
         </div>
         <div class="overlay">
-          <img src="images/sticker.png" class="oldschool animated shakeit shakeit2" />
-          <img src="images/sticker2.png" class="oldschool animated shakeit" />
+          <img src="images/sticker2.png" class="oldschool animated shakeit shakeit2" />
+          <img src="images/sticker.png" class="oldschool animated shakeit" />
           <img src="images/sticker3.png" class="hackday animated shakeit shakeit3" />
         </div>
       </section>
