--- a/roxanne.html
+++ b/roxanne.html
@@ -18,51 +18,67 @@
             <li><a href="#"><img src="images/movies/1.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/1.jpg"/></a></li>
             <li><a href="#"><img src="images/games/1.jpg"/></a></li>
+            <li><a href="#"><img src="images/pop/1.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/2.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/2.jpg"/></a></li>
             <li><a href="#"><img src="images/games/2.jpg"/></a></li>
+            <li><a href="#"><img src="images/pop/2.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/3.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/3.jpg"/></a></li>
             <li><a href="#"><img src="images/games/3.jpg"/></a></li>
+            <li><a href="#"><img src="images/pop/3.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/4.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/4.jpg"/></a></li>
             <li><a href="#"><img src="images/games/4.jpg"/></a></li>
+            <li><a href="#"><img src="images/pop/4.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/5.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/5.jpg"/></a></li>
             <li><a href="#"><img src="images/games/5.jpg"/></a></li>
+            <li><a href="#"><img src="images/pop/5.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/6.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/6.jpg"/></a></li>
             <li><a href="#"><img src="images/games/6.jpg"/></a></li>
+            <li><a href="#"><img src="images/pop/6.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/7.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/7.jpg"/></a></li>
             <li><a href="#"><img src="images/games/7.jpg"/></a></li>
+            <li><a href="#"><img src="images/pop/7.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/8.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/8.jpg"/></a></li>
             <li><a href="#"><img src="images/games/8.jpg"/></a></li>
+            <li><a href="#"><img src="images/pop/8.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/9.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/9.jpg"/></a></li>
             <li><a href="#"><img src="images/games/9.jpg"/></a></li>
+            <li><a href="#"><img src="images/pop/9.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/10.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/10.jpg"/></a></li>
             <li><a href="#"><img src="images/games/10.jpg"/></a></li>
+            <li><a href="#"><img src="images/pop/10.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/11.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/11.jpg"/></a></li>
             <li><a href="#"><img src="images/games/11.jpg"/></a></li>
+            <li><a href="#"><img src="images/pop/11.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/12.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/12.jpg"/></a></li>
             <li><a href="#"><img src="images/games/12.jpg"/></a></li>
+            <li><a href="#"><img src="images/pop/12.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/13.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/13.jpg"/></a></li>
             <li><a href="#"><img src="images/games/13.jpg"/></a></li>
+            <li><a href="#"><img src="images/pop/13.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/14.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/14.jpg"/></a></li>
             <li><a href="#"><img src="images/games/14.jpg"/></a></li>
+            <li><a href="#"><img src="images/pop/14.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/15.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/15.jpg"/></a></li>
             <li><a href="#"><img src="images/games/15.jpg"/></a></li>
+            <li><a href="#"><img src="images/pop/15.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/16.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/16.jpg"/></a></li>
             <li><a href="#"><img src="images/games/16.jpg"/></a></li>
+            <li><a href="#"><img src="images/pop/16.jpg"/></a></li>
             <li><a href="#"><img src="images/movies/17.jpg"/></a></li>
             <li><a href="#"><img src="images/medium/17.jpg"/></a></li>
             <li><a href="#"><img src="images/games/17.jpg"/></a></li>
