--- a/roxanne2.html
+++ b/roxanne2.html
@@ -199,7 +199,7 @@
     </div>
         <div class="overlay">
           <div class="move">
-            <img src="images/sticker-roxanne3.png" class="hackday animated twister4"/>
+            <img src="images/sticker3.png" class="hackday animated twister4"/>
           </div>
         </div>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
